--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -10,6 +10,6 @@ tmp/main.o : src/main.cpp include/Marker.h include/BadMarkerState.h include/Colo
 	$(CXX) $(CXXFLAGS) -c -o $@ $<
 
 bin/marker : tmp/main.o tmp/Marker.o tmp/BadMarkerState.o
-	$(CXX) $(CXXFLAGS) -o $@ $<
+	$(CXX) $(CXXFLAGS) -o $@ $^
 
 
