--- a/js/dockers/node/Dockerfile
+++ b/js/dockers/node/Dockerfile
@@ -2,6 +2,7 @@ FROM node:11-alpine
 RUN yarn global add chai mocha @vue/cli @vue/cli-service-global
 
 WORKDIR /usr/src/app
+ENV HOME /usr/src/app
 VOLUME /usr/src/app
 
 EXPOSE 8080
